# thrust-bug

./: CMakeLists.txt  Dockerfile  README.md  build.sh  main.cu  run.sh  run_initcheck.sh
